# Tesis-security-on-esp32

./: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.runner  Makefile  README.md  astyle-code-format.cfg  build.sh  build_and_flash.sh  custom-partition-table.csv  docker-compose.yml  flash.sh  nvs.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sonar-project.properties
.github/workflows/: build-and-push.yaml  pipeline.yml  static-code-analisis.yaml
Components/backoffAlgorithm/: CMakeLists.txt
Components/coreJSON/: CMakeLists.txt
Components/coreMQTT-Agent/: CMakeLists.txt
Components/coreMQTT-Agent/port/: freertos_command_pool.c
Components/fleet-provisioning/: CMakeLists.txt
Components/init/: CMakeLists.txt  main.c
Components/init/include/: aws_headers.h  init_app.h
Components/iot-core-mqtt-file-downloader/: CMakeLists.txt
Components/jobs/: CMakeLists.txt
Components/key_value_store/: CMakeLists.txt  key_value_store.c
Components/key_value_store/include/: key_value_store.h
Components/logging/: CMakeLists.txt
Components/mqtt-subscription-manager/: CMakeLists.txt
Components/mqtt-subscription-manager/include/: mqtt_subscription_manager.h
Components/mqtt-subscription-manager/src/: mqtt_subscription_manager.c
Components/network_transport/: CMakeLists.txt  network_transport.c
Components/network_transport/include/: network_transport.h
Components/queue_handler/: CMakeLists.txt
Components/queue_handler/include/: queue_handler.h
Components/queue_handler/src/: queue_handler.c
Components/setup_hw/: main.c
Components/setup_hw/include/: setup_config.h
Components/setup_wifi/: CMakeLists.txt  main.c
Components/setup_wifi/include/: wifi_config.h
Components/tasks/application/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
Components/tasks/application/config/: Kconfig.projbuild
Components/tasks/application/include/: application.h  camera_pin.h
Components/tasks/application/src/: main.c
Components/tasks/cert_renew_agent/: CMakeLists.txt
Components/tasks/cert_renew_agent/config/: Kconfig.projbuild
Components/tasks/cert_renew_agent/include/: cert_renew_agent.h  gen_csr.h
Components/tasks/cert_renew_agent/src/: gen_csr.c  main.c
Components/tasks/mqtt_agent/: CMakeLists.txt
Components/tasks/mqtt_agent/config/: Kconfig.projbuild
Components/tasks/mqtt_agent/include/: mqtt_agent.h  mqtt_aws_credentials.h  mqtt_common.h  mqtt_connection.h  mqtt_onboarding.h
Components/tasks/mqtt_agent/src/: main.c  mqtt_aws_credentials.c  mqtt_common.c  mqtt_connection.c  mqtt_onboarding.c
Components/tasks/ota_agent/: CMakeLists.txt
Components/tasks/ota_agent/config/: Kconfig.projbuild
Components/tasks/ota_agent/include/: janpatch.h  ota_agent.h
Components/tasks/ota_agent/src/: delta_ota.c  main.c
Components/tinycbor/: CMakeLists.txt
Dockerfiles/: Dockerfile.runner
Terraform/: backend.tf  main.tf  output.tf
Terraform/certificate_renewal/: backend.tf  main.tf  output.tf  variables.tf
Terraform/certificate_renewal/lambda_code/: certificate_renewal.py  certificate_renewal_request.py
Terraform/certificate_revocation/: backend.tf  main.tf  output.tf  variables.tf
Terraform/certificate_revocation/lambda_code/: certificate_revocation.py
Terraform/fleet_provisioning/: backend.tf  main.tf  output.tf  variables.tf
Terraform/fleet_provisioning/lambda_code/: fleet_provisioning_validation.py
Terraform/uploadImages/: backend.tf  main.tf  output.tf  variables.tf
Terraform/uploadImages/lambda_code/: uploadImages.py
main/: CMakeLists.txt  Kconfig.projbuild  main.c
nvs/: flash_nvs.sh  nvs.csv
