idf_component_register(SRCS "src/main.c"
                            "src/mqtt_common.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "coreMQTT-Agent"
                             "ota_agent"
                             "backoffAlgorithm"
                             "mqtt-subscription-manager"
                             "network_transport"
                             "key_value_store"
                             "logging"
                             "queue_handler"
                    )