idf_component_register(SRCS "src/main.c"
                            "src/mqtt_aws_credentials.c"
                            "src/mqtt_connection.c"
                            "src/mqtt_common.c"
                            "src/mqtt_onboarding.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "setup_hw"
                             "app_update"
                             "coreMQTT-Agent"
                             "fleet-provisioning"
                             "ota_agent"
                             "cert_renew_agent"
                             "backoffAlgorithm"
                             "mqtt-subscription-manager"
                             "network_transport"
                             "key_value_store"
                             "queue_handler"
                    )
component_compile_options(-Wno-error=format= -Wno-format)