idf_component_register(SRCS "src/main.c"
                            "src/delta_ota.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "coreMQTT-Agent"
                             "coreJSON"
                             "jobs"
                             "mqtt_agent"
                             "iot-core-mqtt-file-downloader"
                             "queue_handler"
                             "app_update"
                    )